<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/colorprincipalaplicacion">

    <TextView
        android:id="@+id/nombrePerroFormulario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/primerElementoTextViewPerrosFormulario" />

    <EditText
        android:id="@+id/eee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name" />
    <TextView
        android:id="@+id/razaPerroFormulario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/segundoElementoTextViewPerrosFormulario" />

    <EditText
        android:id="@+id/editTexta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name" />
    <TextView
        android:id="@+id/edadPerroFormulario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tercerElementoTextViewPerrosFormulario" />

    <EditText
        android:id="@+id/editTexts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name" />
    <TextView
        android:id="@+id/sexoPerroFormulario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cuartoElementoTextViewPerrosFormulario" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name" />
    <TextView
        android:id="@+id/descripcionPerroFormulario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quintoElementoTextViewPerrosFormulario" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name" />
    <TextView
        android:id="@+id/fotoPerroFormulario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sextoElementoTextViewPerrosFormulario" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name" />
    <Button
        android:id="@+id/cancelarFormulario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/elementoX"/>
    <Button
        android:id="@+id/confirmarFormulario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/elementoV"/>
</LinearLayout>